[tool.poetry]
name = "europe"
version = "0.1.0"

authors = [
    "eu <eu@europe.com>"
]
description = "eu"

[tool.poetry.dependencies]
python = "^3.5"
france = { path = "./europe/france/" }
germany = { path = "./europe/germany/" }
spain = { path = "./europe/spain/" }
italy = { path = "./europe/italy/" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
