[tool.poetry]
name = "france"
version = "0.1.0"

authors = [
    "france <france@europe.com>"
]
description = "france"

[tool.poetry.dependencies]
python = "^3.5"
requests = "2.11"
trio = "0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
